<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        tools:context=".presentation.createreminder.CreateReminderFragment">

        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="51dp"
            android:layout_height="41dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/title"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/titleImage"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/dateImage"
            android:layout_width="51dp"
            android:layout_height="41dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleImage"/>

        <TextView
            android:id="@+id/selectedDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="11dp"
            android:paddingStart="5dp"
            android:hint="@string/date"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/timeImage"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"/>

        <ImageView
            android:id="@+id/timeImage"
            android:layout_width="51dp"
            android:layout_height="41dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_clock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateImage"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/setDateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/selectedDateText"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="2dp"
            android:background="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@+id/dateImage"
            app:layout_constraintTop_toBottomOf="@+id/selectedDateText"/>

        <TextView
            android:id="@+id/selectedTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="11dp"
            android:paddingStart="5dp"
            android:hint="@string/time"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/timeImage"
            app:layout_constraintTop_toBottomOf="@+id/selectedDateText"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/setTimeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/selectedTimeText"
            app:layout_constraintTop_toBottomOf="@+id/selectedDateText"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/selectedClientImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:background="@color/teal_700"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeImage"
            app:shapeAppearanceOverlay="@style/circleImageViewStyle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="63dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="3dp"
            android:background="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@+id/timeImage"
            app:layout_constraintTop_toBottomOf="@+id/selectedTimeText"/>

        <TextView
            android:id="@+id/fullNameSelectedClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="5dp"
            android:hint="@string/full_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/selectedClientImage"
            app:layout_constraintTop_toBottomOf="@+id/selectedTimeText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@+id/selectedClientImage"
            app:layout_constraintTop_toBottomOf="@+id/fullNameSelectedClient"/>

        <TextView
            android:id="@+id/emailSelectedClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="5dp"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toEndOf="@+id/selectedClientImage"
            app:layout_constraintTop_toBottomOf="@+id/fullNameSelectedClient"/>

        <Button
            android:id="@+id/selectClientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/select_client"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSelectedClient"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/createReminderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            app:tint="@android:color/white"
            app:backgroundTint="@color/light_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>